@@ -1,0 +1,21 @@
+Description:
+Safe automatic memory allocation with out of memory checking.
+
+Files:
+lib/xallocsa.h
+lib/xallocsa.c
+
+Depends-on:
+allocsa
+xalloc
+
+configure.ac:
+
+Makefile.am:
+lib_SOURCES += xallocsa.h xallocsa.c
+
+Include:
+#include "xallocsa.h"
+
+Maintainer:
+Bruno Haible
