@@ -1,5 +1,10 @@
 2003-11-24  Bruno Haible  <bruno@clisp.org>
 
+	* xallocsa.h: New file, from GNU gettext.
+	* xallocsa.c: New file, from GNU gettext.
+
+2003-11-24  Bruno Haible  <bruno@clisp.org>
+
 	* allocsa.h: New file, from GNU gettext.
 	* allocsa.c: New file, from GNU gettext.
 
