@@ -1,5 +1,10 @@
 2004-01-20  Bruno Haible  <bruno@clisp.org>
 
+	* modules/xallocsa: New file.
+	* MODULES.html.sh (func_all_modules): Add xallocsa.
+
+2004-01-20  Bruno Haible  <bruno@clisp.org>
+
 	* modules/allocsa: New file.
 	* MODULES.html.sh (func_all_modules): Add allocsa.
 
